<resources>
    <string name="app_name">My Notes</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_0">0</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="wrong_pin">Wrong PIN</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>

    <string name="slider_text1">A free notes app to store text, such as emails and password, life quotes, etc.</string>
    <string name="slider_text2">You can enable and add PIN so that any phone intruder will not be able to access your notes.</string>
    <string name="slider_text3">You might want to also enable fingerprint login to avoid exposing your PIN to anyone around you in public places</string>

    <!-- Preference Titles -->
    <string name="security_header">Security</string>

    <string name="pin_title">Login using PIN</string>
    <string name="fingerprint_title">Login using fingerprint</string>
    <string name="fingerprint_summary">Allows user to open notes using fingerprint saved in this device</string>
    <string name="pin_summaryOff">Enable the 4 Digit PIN combination to safeguard your notes</string>
    <string name="pin_summaryOn">Disable the 4 Digit PIN combination to safeguard your notes</string>

    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="pin">Pin</string>
    <string name="save">Save</string>
    <string name="forgot_pin">Forgot PIN?</string>
    <string name="empty_notes">It\'s Empty \n\nNotes you created will appear here</string>
    <string name="empty_trash">It\'s Empty \n\nTrashed notes will appear here</string>
    <string name="privacy_policy">The app My Notes for android does not communicate with any server for fetching your saved notes and other activities done inside the app. The author himself does not collect any data of any kind inside and outside of My Notes app. Any loss or damage in the notes herein is not shouldered by the author of this app.</string>
    <string name="create_pin">Create PIN</string>
    <string name="new_pin">New PIN</string>
    <string name="re_enter_new_pin">Re enter new PIN</string>
    <string name="save_pin">Save PIN</string>
    <string name="delete">Delete</string>
    <string name="restore">Restore</string>
    <string name="notes">Notes</string>
    <string name="trashed">Trashed</string>
    <string name="settings">Settings</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="back">Back</string>

</resources>