<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/top_menu"
        android:checkableBehavior="single">

        <item
            android:title=""/>

        <item
            android:id="@+id/menu_notes"
            android:icon="@drawable/ic_notes"
            android:title="@string/notes" />

        <item
            android:id="@+id/menu_delete"
            android:icon="@drawable/ic_delete"
            android:title="@string/trashed" />
    </group>

    <group
        android:id="@+id/mid_menu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />

    </group>

    <group
        android:id="@+id/bottom_menu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_privacy"
            android:icon="@drawable/ic_policy"
            android:title="@string/privacy_policy_title" />
    </group>

</menu>